# nautilus-alpaca

./: .gitignore  go.py  minimal_example_adapter.py  pyproject.toml  strategy.py
alpaca_adapter/: config.py  core.py  data.py  execution.py  providers.py
nautilus_alpaca_adapter/: config.py  core.py  data.py  error.py  execution.py  factories.py  http.py  parser.py  providers.py  websocket.py
tests/: conftest.py  test_data.py  test_execution.py  test_providers.py
