[project]
name = "nautilus-alpaca-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "nautilus-trader>=1.219.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
addopts = "-s"
